test/error/error.input043.zc
Unknown variable or function:b on line 3
